# lara-app/app/Http/Requests/LinkPaymentMethodRequest.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Requests;
 
+use App\Models\LinkedMethod;
 use App\Models\PaymentMethod;
 use Illuminate\Auth\Access\AuthorizationException;
 use Illuminate\Foundation\Http\FormRequest;
@@ -29,35 +30,38 @@ class LinkPaymentMethodRequest extends FormRequest
     public function rules()
     {
         $rules = [
-            'payment_method_id' => 'required_if:link_payment_method,true|exists:App\Models\PaymentMethod,id',
+            //'payment_method_id' => 'required_if:link_payment_method,true|exists:App\Models\PaymentMethod,id',
             'payment_method_attributes' => 'required|array|min:1'
         ];
 
-        $rules = $this->generatePaymentMethodRules($rules);
+        // Check if validation will be run for Link Payment Method functionality
+        if($this->route('paymentMethodId') !== null && PaymentMethod::where('id', $this->route('paymentMethodId'))->exists()){
+            $payment_method = PaymentMethod::find($this->route('paymentMethodId'));
+            $rules = $this->generatePaymentMethodRules($rules, $payment_method);
+        }
+        // Check if validation will be run for Update Linked Payment Method functionality
+        elseif($this->route('linkedMethodId') !== null && PaymentMethod::where('id', $this->route('linkedMethodId'))->exists()){
+            $linked_method = LinkedMethod::find($this->route('linkedMethodId'));
+            $payment_method = $linked_method->paymentMethod;
+            $rules = $this->generatePaymentMethodRules($rules, $payment_method);
+        }
 
         return $rules;
     }
 
-    protected function generatePaymentMethodRules($rules){
+    protected function generatePaymentMethodRules($rules, $payment_method){
+        // Prepare apprpriate rules based on the input payment method
+        $country = $payment_method->country;
 
-        $payment_method_id = $this->has('payment_method_id') ? $this->input('payment_method_id'):'';
-        if($payment_method_id && PaymentMethod::where('id', $payment_method_id)->exists()) {
-
-            // Prepare apprpriate rules based on the input payment method
-            $payment_method = PaymentMethod::find($payment_method_id);
-            $country = $payment_method->country;
-
-            if ($country->name === 'DE' && $payment_method->name === 'Paypal') {
-                $rules = $this->addPaypalRulesForDE($rules);
-            } elseif ($country->name === 'DE' && $payment_method->name === 'Bank Transfer') {
-                $rules = $this->addBankTransferRulesForDE($rules);
-            } elseif ($country->name === 'IR' && $payment_method->name === 'Bank Transfer') {
-                $rules = $this->addBankTransferRulesForIR($rules);
-            }
+        if ($country->name === 'DE' && $payment_method->name === 'Paypal') {
+            $rules = $this->addPaypalRulesForDE($rules);
+        } elseif ($country->name === 'DE' && $payment_method->name === 'Bank Transfer') {
+            $rules = $this->addBankTransferRulesForDE($rules);
+        } elseif ($country->name === 'IR' && $payment_method->name === 'Bank Transfer') {
+            $rules = $this->addBankTransferRulesForIR($rules);
         }
 
         return $rules;
-
     }
 
     protected function addPaypalRulesForDE($rules)
